--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,3 +1,17 @@
 body{
   padding: 0;
 }
+.example-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.sidenav{
+  width: 65%;
+}
+.cart{
+  float: right;
+  margin-bottom: 20px;
+}
