--- a/frontend/src/app/cardlist/cardlist.component.css
+++ b/frontend/src/app/cardlist/cardlist.component.css
@@ -4,7 +4,16 @@ mat-card{
     height: auto;
 
   }
+.select{
+  margin: 10px 0px;
+  border: 2px dashed darkblue;
+  width: 100%;
+  height: 30px;
+  padding-top: 7px;
+  padding-left: 5px;
+  border-radius: 10px;
 
+}
 @media screen and (min-width : 600px) {
   mat-card{
     width: 20%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
