--- a/frontend/src/app/search/search.component.html
+++ b/frontend/src/app/search/search.component.html
@@ -1,3 +1,3 @@
 <form id="demo-1">
-  <input type="search"  placeholder="Search" appSearchd [(ngModel)]="searchText">
+  <input type="search"  placeholder="Search"  [(ngModel)]="searchText">
 </form>
