--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -18,14 +18,27 @@
 </div>
 
   <div fxShow="true" fxHide.lt-md="true">
-  <mat-toolbar color="primary">
+  <mat-toolbar>
   <span>
     <a routerLink="/" routerLinkActive="mat-accent">MyMed</a>
   </span>
 
   <div fxFlex fxShow=”true” fxHide.lt-md=”true”>
 
-    <app-search (searchText)="getNotification($event)"></app-search>
+    <form class="example-form">
+      <mat-form-field >
+        <input matInput placeholder="State" aria-label="State" [matAutocomplete]="auto" [formControl]="stateCtrl">
+        <mat-autocomplete #auto="matAutocomplete">
+          <mat-option *ngFor="let state of filteredStates | async" [value]="state">
+            <img class="example-option-img" aria-hidden [src]="state" height="25">
+            <span>{{state}}</span> |
+            <small>Population: {{state}}</small>
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+
+
+    </form>
 
   </div>
   <span class="spacer"></span>
