Completed many things

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="example-container">
-  <mat-sidenav #sidenav mode="over" class="sidenav">
+  <mat-sidenav #sidenav mode="over" class="sidenav"
+             >
     <mat-list>
-
         <mat-list-item *ngIf="isAuthenticated">
           <a mat-button routerLink="/home" routerLinkActive="mat-accent">My Account</a>
         </mat-list-item>
