--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -15,3 +15,17 @@ body{
   float: right;
   margin-bottom: 20px;
 }
+
+.sidenav::after {
+  content: "";
+  background: url(../assets/images/medicalDirectors.jpg);
+  background-position: center;
+  background-size: cover;
+  opacity: 0.3;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
