--- a/frontend/src/app/cardlist/cardlist.component.html
+++ b/frontend/src/app/cardlist/cardlist.component.html
@@ -23,7 +23,7 @@
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>Dr. {{doctor.name}}</mat-card-title>
-      <mat-card-subtitle>{{doc2tor.speciality}}</mat-card-subtitle>
+      <mat-card-subtitle>{{doctor.speciality}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content [@hover]="currentstate">
       <span>Visit : {{doctor.visit | currency : 'INR'}}</span>
