--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -26,18 +26,12 @@
   <div fxFlex fxShow=”true” fxHide.lt-md=”true”>
 
     <form class="example-form">
-      <mat-form-field >
-        <input matInput placeholder="State" aria-label="State" [matAutocomplete]="auto" [formControl]="stateCtrl">
-        <mat-autocomplete #auto="matAutocomplete">
+        <input matInput [matAutocomplete]="auto" type="search" [formControl]="stateCtrl">
+        <mat-autocomplete #auto="matAutocomplete" >
           <mat-option *ngFor="let state of filteredStates | async" [value]="state">
-            <img class="example-option-img" aria-hidden [src]="state" height="25">
-            <span>{{state}}</span> |
-            <small>Population: {{state}}</small>
+            <span>{{state}}</span>
           </mat-option>
         </mat-autocomplete>
-      </mat-form-field>
-
-
     </form>
 
   </div>
@@ -58,7 +52,7 @@
       <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
     </li>
     <li *ngIf="isAuthenticated">
-      <button mat-button (click)="logout()">Logout</button>
+      <a mat-button (click)="logout()">Logout</a>
     </li>
     <li *ngIf="isAuthenticated">
       <app-cart></app-cart>
