--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -26,7 +26,10 @@
 
   <mat-sidenav-content>
     <app-header (clickEvent)="sidenav.toggle()"></app-header>
-    <router-outlet></router-outlet>
+    <router-outlet>
+      <ng4-loading-spinner> </ng4-loading-spinner>
+
+    </router-outlet>
     <app-footer></app-footer>
   </mat-sidenav-content>
 
